fix card preview and fix its size - add pipe for truncate long text

--- a/menuchi-app/src/app/user/components/category/category.component.scss
+++ b/menuchi-app/src/app/user/components/category/category.component.scss
@@ -93,6 +93,8 @@
 
     nz-card {
       width: 19rem;
+      min-height: 11rem;
+      max-height: 11rem;
       border-color: #d0d3d7;
       border-radius: 0;
       cursor: grab;
@@ -130,11 +132,12 @@
       }
 
       .item-content {
-        //padding: 1rem;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         gap: 0.8rem;
+        min-height: 8rem;
+        padding-block-end: 1rem;
 
         div {
           display: flex;
@@ -142,6 +145,8 @@
           justify-content: space-between;
 
           .ingredients {
+            //width: 70%;
+
             h3 {
               color: #243e62;
               font-size: 0.9rem;
@@ -164,7 +169,9 @@
           background-color: #aaaaaa;
           border-radius: 4px;
           height: 80px;
+          min-height: 80px;
           width: 80px;
+          min-width: 80px;
         }
       }
     }
